# kiwi

./: .coveragerc  .gitignore  CLAUDE.md  Makefile  README.md  constitution.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: __init__.py  auth.py  authorization.py  config.py  database.py  db.py  main.py  session_state.py
app/cli/: MenuFunctions.py  cli_wrapper_funcs.py  constants.py  input_collector.py  menu_printer.py  print_utils.py  session_state.py
app/domain/: Investment.py  Portfolio.py  Security.py  User.py  __init__.py
app/log/: RequestIdFilter.py
app/models/: Investment.py  Portfolio.py  PortfolioPermission.py  PortfolioSecurity.py  Security.py  Transaction.py  User.py  __init__.py
app/routes/: README.md  __init__.py  portfolio_routes.py  security_routes.py  user_routes.py
app/service/: __init__.py  alpha_vantage_client.py  cognito_client.py  login_service.py  portfolio_service.py  security_service.py  transaction_service.py  user_service.py
backend/: .dockerignore  CLAUDE.md  pyproject.toml
backend/libs/platform_common/: pyproject.toml
backend/libs/platform_common/platform_common/: auth.py  errors.py  logging.py
backend/libs/platform_common/tests/unit/: conftest.py  test_auth.py  test_errors.py  test_logging.py
backend/services/app-api/: CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/services/app-api/app/: __init__.py
backend/services/app-api/app/agents/: __init__.py
backend/services/app-api/app/models/: __init__.py
backend/services/app-api/app/routes/: __init__.py
backend/services/app-api/app/schemas/: __init__.py
backend/services/app-api/app/services/: __init__.py
backend/services/app-api/migrations/: env.py
backend/services/app-api/tests/contract/: __init__.py
backend/services/identity/: CLAUDE.md  Dockerfile  pyproject.toml
backend/services/identity/app/: __init__.py
backend/services/identity/app/models/: __init__.py
backend/services/identity/app/routes/: __init__.py
backend/services/identity/app/schemas/: __init__.py
backend/services/identity/app/services/: __init__.py
backend/services/identity/migrations/: env.py
backend/services/identity/tests/contract/: __init__.py
backend/services/worker/: CLAUDE.md  Dockerfile  pyproject.toml
backend/services/worker/app/: worker.py
backend/services/worker/app/agents/: __init__.py
backend/services/worker/app/models/: __init__.py
backend/services/worker/app/services/: __init__.py
backend/services/worker/migrations/: env.py
backend/services/worker/tests/contract/: __init__.py
contracts/: README.md  identity.openapi.yaml
contracts/messages/: grading-job.schema.json
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.smoke.test.jsx
infra/: CLAUDE.md  app.py  cdk.context.json  cdk.json  pyproject.toml
infra/stacks/: __init__.py  data_stack.py  network_stack.py
scripts/: code-pkce.py  generate_ddl.py
specs/phases/: roadmap.md
tests/: conftest.py  test_auth.py
tests/cli/: test_cli_wrapper_funcs.py  test_input_collector.py
(+24 files in other folders)
