[project]
name = "kiwi-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "libs/platform_common",
    "services/identity",
    "services/app-api",
    "services/worker",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
