[project]
name = "app-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "sqlalchemy",
    "alembic",
    "gunicorn",
    "boto3",
    "platform-common",
]

[tool.uv.sources]
platform-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
