[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "sqlalchemy",
    "alembic",
    "platform-common",
]

[tool.uv.sources]
platform-common = { path = "../../libs/platform_common" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
