[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "sqlalchemy",
    "alembic",
    "platform-common",
]

[tool.uv.sources]
platform-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
